[package]
name = "justq"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A tiny software-development Q&A, French/English translation, and correction CLI powered by local Ollama models."
readme = "README.md"
repository = "https://github.com/y-sunflower/justq"
keywords = ["cli", "llm", "markdown", "ollama"]
categories = ["command-line-utilities"]
autobins = false

[[bin]]
name = "justq"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.6.1"
clap = { version = "4.5", features = ["derive", "env"] }
fastrand = "2.4.1"
ollama-rs = { version = "0.3.4", features = ["stream"] }
termimad = "0.30.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
